--- a/pages/busqueda/busqueda.html
+++ b/pages/busqueda/busqueda.html
@@ -34,42 +34,43 @@
 
     <div class="container_maps">
         <select id="selectBarrios">
-            <option value="Agronomia">Agronomia</li>
-            <option value="Almagro">Almagro</li>
-            <option value="Balvanera">Balvanera</li>
-            <option value="Barracas">Barracas</li>
+            <option vallue="default">Selecciona tu barrio</option>
+            <option value="Agronomia">Agronomia</option>
+            <option value="Almagro">Almagro</option>
+            <option value="Balvanera">Balvanera</option>
+            <option value="Barracas">Barracas</option>
             <option value="belgrano">Belgrano</option>
-            <option value="Boedo">Boedo</li>
-            <option value="Caballito">Caballito</li>
-            <option value="Chacarita">Chacarita</li>
-            <option value="Coghlan">Coghlan</li>
-            <option value="Colegiales">Colegiales</li>
-            <option value="Constitucion">Constitución</li>
-            <option value="Flores">Flores</li>
-            <option value="Floresta">Floresta</li>
-            <option value="La_Boca">La Boca</li>
-            <option value="La_Paternal">La Paternal</li>
-            <option value="Liniers">Liniers</li>
-            <option value="Mataderos">Mataderos</li>
-            <option value="Monte_Castro">Monte Castro</li>
-            <option value="Monserrat">Monserrat</li>
-            <option value="Nueva_Pompeya">Nueva Pompeya</li>
-            <option value="Nuñez">Núñez</li>
-            <option value="Palermo">Palermo</li>
-            <option value="Parque_Avellaneda">Parque Avellaneda</li>
-            <loption value="Parque_Chacabuco">Parque Chacabuco</li>
-            <option value="Parque_Chas">Parque Chas</li>
-            <option value="Parque_Patricios">Parque Patricios</li>
-            <option value="Recoleta">Recoleta</li>
-            <option value="Retiro">Retiro</li>
-            <option value="Saavedra">Saavedra</li>
-            <option value="San_Cristóbal">San Cristóbal</li>
-            <option value="San_Nicolás">San Nicolás</li>
-            <option value="San_Telmo">San Telmo</li>
-            <option value="Villa_Crespo">Villa Crespo</li>
-            <option value=option value="Villa_del_Parque">Villa del Parque</li>
-            <option value="Villa_Devoto">Villa Devoto</li>
-            <option value="Villa_Urquiza">Villa Urquiza</li>
+            <option value="Boedo">Boedo</option>
+            <option value="Caballito">Caballito</option>
+            <option value="Chacarita">Chacarita</option>
+            <option value="Coghlan">Coghlan</option>
+            <option value="Colegiales">Colegiales</option>
+            <option value="Constitucion">Constitución</option>
+            <option value="Flores">Flores</option>
+            <option value="Floresta">Floresta</option>
+            <option value="La_Boca">La Boca</option>
+            <option value="La_Paternal">La Paternal</option>
+            <option value="Liniers">Liniers</option>
+            <option value="Mataderos">Mataderos</option>
+            <option value="Monte_Castro">Monte Castro</option>
+            <option value="Monserrat">Monserrat</option>
+            <option value="Nueva_Pompeya">Nueva Pompeya</option>
+            <option value="Nuñez">Núñez</option>
+            <option value="Palermo">Palermo</option>
+            <option value="Parque_Avellaneda">Parque Avellaneda</option>
+            <option value="Parque_Chacabuco">Parque Chacabuco</option>
+            <option value="Parque_Chas">Parque Chas</option>
+            <option value="Parque_Patricios">Parque Patricios</option>
+            <option value="Recoleta">Recoleta</option>
+            <option value="Retiro">Retiro</option>
+            <option value="Saavedra">Saavedra</option>
+            <option value="San_Cristobal">San Cristóbal</option>
+            <option value="San_Nicolas">San Nicolás</option>
+            <option value="San_Telmo">San Telmo</option>
+            <option value="Villa_Crespo">Villa Crespo</option>
+            <option value="Villa_del_Parque">Villa del Parque</option>
+            <option value="Villa_Devoto">Villa Devoto</option>
+            <option value="Villa_Urquiza">Villa Urquiza</option>
         </select>
         <div id="infoArticulo"></div>
     </div>
