--- a/pages/busqueda/busqueda.html
+++ b/pages/busqueda/busqueda.html
@@ -19,9 +19,10 @@
 
             <ul>
                 <li><i class="fa-solid fa-bicycle"></i></li>
-                <li><a href="/../../inicio.html">Inicio</a></li>
-                <li><a href="/../pages/nosotros.html">Nosotros</a></li>
-                <li> <a href="/../pages/contacto.html">Contacto</a></li>
+                <li><a href="../../inicio.html">Inicio</a></li>
+                <li><a href="../nosotros.html">Nosotros</a></li>
+                <li> <a href="../contacto.html">Contacto</a></li>
+                <li> <a href="../graficos.html">Conoce mas</a></li>
                 <li><i class="fa-solid fa-bicycle"></i></li>
 
             </ul>
