--- a/pages/busqueda/busqueda.html
+++ b/pages/busqueda/busqueda.html
@@ -40,11 +40,11 @@
             <option value="Almagro">Almagro</option>
             <option value="Balvanera">Balvanera</option>
             <option value="Barracas">Barracas</option>
-            <option value="belgrano">Belgrano</option>
+            <option value="Belgrano">Belgrano</option>
             <option value="Boedo">Boedo</option>
             <option value="Caballito">Caballito</option>
             <option value="Chacarita">Chacarita</option>
-            <option value="Coghlan">Coghlan</option>
+            <option value="Cohglan">Cohglan</option>
             <option value="Colegiales">Colegiales</option>
             <option value="Constitucion">Constitución</option>
             <option value="Flores">Flores</option>
