Cambios en vista busqueda

--- a/pages/busqueda/busqueda.html
+++ b/pages/busqueda/busqueda.html
@@ -78,6 +78,8 @@
 
 </section>
 
+<div><img class="img-ciudad" src="../../img/imagen-ciudad.jpg" alt="logo-BA-ciudad"></div>
+
 </main>
 <script src="script.js"></script>
 </body>
