--- a/pages/graficos.html
+++ b/pages/graficos.html
@@ -48,7 +48,7 @@
 
             <h2 class="titular-h2">¿Por qué usar EcoBici?</h2>
             <div class="fade-in">
-                <div class="texto1">
+                <div class="txto">
                     <h3>Distancias más recorridas</h3>
                     <p>Las bicicletas de EcoBici son ideales para recorrer distancias cortas y medianas en la ciudad.
                         Los usuarios disfrutan de trayectos promedio de 3 kilómetros, lo que representa una opción rápida,
@@ -66,7 +66,7 @@
                         los puntos de interés, áreas de alta demanda en la ciudad y rápida combinación con otros medios de
                         transporte, lo que las convierte en opciones favoritas para los usuarios.</p>
                 </div>
-                <img class="grafico-año2" src="../Graficos/image4.png" alt="imagen_año">
+                <img class="grafico-año1" src="../Graficos/image4.png" alt="imagen_año">
             </div>
             <div class="fade-in">
                 <div class="txto">
@@ -76,10 +76,9 @@
                         comunidad de ciclistas, hemos contribuido significativamente a una movilidad más sostenible en
                         Buenos Aires.</p>
                 </div>
-                <img class="grafico-año3" src="../Graficos/image5.png" alt="imagen_año">
+                <img class="grafico-año1" src="../Graficos/image5.png" alt="imagen_año">
             </div>
             <div class="fade-in">
-                
                 <div class="txto">
                     <h3>Horarios de mayor uso</h3>
                     <p>Las Eco bicis son una elección popular tanto para los que se dirigen al trabajo durante las mañanas,
@@ -87,8 +86,7 @@
                         uso son de 16 a 19 y de 12 a 15, cuando nuestras estaciones experimentan una alta demanda de
                         bicicletas.</p>
                 </div>
-
-                <img class="grafico-año4" src="../Graficos/image3.png" alt="imagen_año">
+                <img class="grafico-año1"src="../Graficos/image3.png" alt="imagen_año">
             </div>
             
 
